# tn3270-java

./: .gitignore  CHANGELOG  Makefile.in  README.md  configure.ac  gitsync.sh  java-tn3270.cbp  metainfo.xml.in  pw3270-java.cbp  pw3270-plugin-java.spec
.github/workflows/: codeql.yml  msys2.yml
arch/: PKGBUILD
debian/: changelog  control  pw3270-plugin-java.dsc  rules  tn3270-java.dsc
rpm/: _service  lib3270-java-bindings.spec  pw3270-plugin-java.spec  tn3270-java.spec
src/: Terminal.java
src/include/: config.h.in  java3270.h  jni3270.h
src/jni/: Makefile.in  actions.cc  clipboard.cc  cursor.cc  dialog.cc  field.cc  getset.cc  info.cc  keyboard.cc  main.cc  private.h
src/native/: action.cc  actions.cc  connect.cc  get.cc  gettext.cc  handler.cc  info.cc  init.cc  set.cc  states.cc  tools.cc  wait.cc  workers.cc
src/native/os/windows/: init.cc  resources.rc.in
src/plugin/: Makefile.in  call.cc  plugin.cc  private.h  startstop.cc
testprograms/: test.java  version.java
win/: ci-build.sh  makepackage.sh.in  pack.sh
